<resources>
    <string name="app_name">BritishBeggarHooks</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_real_main">RealMainActivity</string>

    <string name="door_open_hint">\nWrit your acknowledgement to the heart.\n\nSubmit to confine.\n\nThe door shall be opened.</string>

    <string name="ui_info">Target Information</string>
    <string name="ui_info_lable_version">Target Version</string>
    <string name="ui_info_lable_capability">Capability</string>

    <string name="generic_hooking_supported">Generic Hooking Supported</string>
    <string name="capability_full_support">Full Support</string>
    <string name="capability_no_support">No Support</string>


    <string name="capability_loading">Loading…</string>
    <string name="version_loading">Loading…</string>

    <string name="arc_read_version">%s %s</string>
    <string name="arc_version_china">China</string>
    <string name="arc_version_playstore">Playstore</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="ui_nav_dashboard">Dashboard</string>
    <string name="ui_nav_settings">Settings</string>
    <string name="no_lsp_found">LSPosed Not Found</string>
</resources>