<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings_fragment_dashboard"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentSettingsDashboard">

    <androidx.cardview.widget.CardView
        android:layout_width="340dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="#2d2f31"
        app:cardCornerRadius="20dp" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="17dp"


                android:text="@string/ui_info"
                android:textColor="#bbbbbb"
                android:textFontWeight="30"
                android:textSize="20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="69dp"
                android:text="@string/ui_info_lable_version"


                android:textColor="#bbbbbb"
                android:textFontWeight="15"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/versionStringDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="88dp"
                android:text="@string/version_loading"


                android:textColor="#bbbbbb"
                android:textFontWeight="30"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="134dp"
                android:text="@string/ui_info_lable_capability"


                android:textColor="#bbbbbb"
                android:textFontWeight="15"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/loadingVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="153dp"
                android:text="@string/capability_loading"
                android:drawablePadding="10dp"

                android:visibility="visible"

                android:textFontWeight="30"
                android:textSize="20sp"
                android:textColor="#bbbbbb"/>

            <TextView
                android:id="@+id/versionOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="153dp"
                android:text="@string/capability_full_support"
                android:drawablePadding="10dp"

                android:visibility="invisible"

                android:textFontWeight="30"
                android:textSize="20sp"
                android:textColor="#57a957"
                app:drawableRightCompat="@drawable/baseline_check_circle_outline_24" />

            <TextView
                android:id="@+id/versionFailed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="30dp"
                android:layout_marginTop="153dp"
                android:drawablePadding="10dp"
                android:text="@string/capability_no_support"

                android:textColor="#ff6b68"


                android:textFontWeight="30"
                android:textSize="20sp"
                android:visibility="invisible"
                app:drawableRightCompat="@drawable/error" />



        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>